Fixed a layout issue in IE + Detailed info on Tweet

--- a/stylesheets/screen.scss
+++ b/stylesheets/screen.scss
@@ -387,7 +387,7 @@ body.bp #content {
   }
 
   .panel-wrapper {
-    margin: 0 0 0 82px;
+    margin: 16px 0 0 82px;
     .panel {
       display: block;
       float: left;
